.deploy/loki/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http-default
      protocol: TCP
      port: 80
      targetPort: 3100
    - name: http
      protocol: TCP
      port: 3100
      targetPort: 3100
